src/objects/Product_Rate_Plan_Charge__c.object
<CustomObject>
    <fields>
        <fullName>Accounting_Code__c</fullName>
        <label>Accounting Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Code__c</fullName>
        <label>Charge Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Sequence_Number__c</fullName>
        <label>Charge Sequence Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Unit Cost Price</description>
        <inlineHelpText>Unit Cost Price</inlineHelpText>
        <label>Unit Cost Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Quantity__c</fullName>
        <label>Default Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deferred_Revenue_Accounting_Code__c</fullName>
        <label>Deferred Revenue Accounting Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Id from old KVH system</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Intercompany_Service_Provider__c</fullName>
        <label>Intercompany Service Provider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VMI</fullName>
                </value>
                <value>
                    <fullName>VMA</fullName>
                </value>
                <value>
                    <fullName>VTS</fullName>
                </value>
                <value>
                    <fullName>VCR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Product_Editable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When this is checked for a specific charge all the parameters of the charge should be editable</description>
        <label>Is Price Editable In Quote/Order Wizards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Percentage_of_Other_Charges__c</fullName>
        <label>% of Other Charges</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Price_Type__c</fullName>
        <description>This will specify whether price is onetime, weekly, monthly etc or usage(metered) based.</description>
        <label>Price Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One Time</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Usage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Format__c</fullName>
        <description>This will specify whether price is default or tiered</description>
        <label>Pricing Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pricing_Model</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Charge_Category__c</fullName>
        <description>Use this field if you would want to configure different Tax or VAT percentages for different categories.</description>
        <inlineHelpText>Use this field if you would want to configure different Tax or VAT percentages for different categories.</inlineHelpText>
        <label>Tax Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Taxable</fullName>
                    <default>true</default>
                    <label>Taxable</label>
                </value>
                <value>
                    <fullName>Non Taxable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Rate_Plan__c</fullName>
        <label>Product Rate Plan</label>
        <referenceTo>Product_Rate_Plan__c</referenceTo>
        <relationshipLabel>Product Rate Plan Charges</relationshipLabel>
        <relationshipName>Product_Rate_Plan_Charges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_Rule__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Revenue Recognition Rule</label>
        <referenceTo>Revenue_Recognition_Rule__c</referenceTo>
        <relationshipLabel>Product Rate Plan Charges</relationshipLabel>
        <relationshipName>Product_Rate_Plan_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscription Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Title Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transfer_Price__c</fullName>
        <label>Transfer Price %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Unit_Of_Measurement__c</fullName>
        <description>Unit of measurement
(Unit, kilo, tonne etc)</description>
        <inlineHelpText>Unit of measurement
(Unit, kilo, tonne etc)</inlineHelpText>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>UOM</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <description>Unit Selling Price</description>
        <inlineHelpText>Unit Selling Price</inlineHelpText>
        <label>Unit Selling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Uplift_Frequency__c</fullName>
        <inlineHelpText>Use this to indicate what would be your uplift frequency. So a frequency of Annual with 2% as uplift would increase the unit price by 2% every year for the duration of the contract.</inlineHelpText>
        <label>Uplift Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Uplift__c</fullName>
        <label>Uplift %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Product Rate Plan Charge</label>
    <nameField>
        <label>Product Rate Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Rate Plan Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>